--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,16 +1,16 @@
 # Add Authors here
 johndoe:
-   name: John Doe
-   username: johndoe
-   site: http://johndoe.com
+   name: Jnanesh Prabhu
+   username: JnaneshPrabhu
+   site: http://jnaneshprabhu.github.io
    avatar: johndoe.png
-   bio: "Hi I a John, a Web Developer and Designer."
-   email: mail@johndoe.com
+   bio: "Hi I a Jnanesh, a Business Intelligence Analyst."
+   email: jnanesh.prabhu@gmail.com
    social:
       - title: "github"
-        url: "https://github.com/johndoe"
+        url: "https://github.com/JnaneshPrabhu"
       - title: "linkedin"
-        url: "https://www.linkedin.com/in/johndoe"
+        url: "https://www.linkedin.com/in/jnanesh"
       - title: "youtube"
         url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
       - title: "facebook"
@@ -30,20 +30,4 @@ johndoe:
       - title: "flickr"
         url: "https://flickr.com/johndoe"
 
-xplor4r:
-   name: Sujay kundu
-   username: xplor4r
-   site: https://sujaykundu.com
-   avatar: xplor4r.png
-   bio: "Full Stack Web Developer, based in Bangalore, India"
-   email: mail@sujaykundu.com
-   social:
-      - title: "github"
-        url: "https://github.com/sujaykundu777"
-      - title: "linkedin"
-        url: "https://www.linkedin.com/in/sujaykundu"
-      - title: "youtube"
-        url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
-      - title: "facebook"
-        url: "https://www.facebook.com/sujay.kundu2"
 
